testsuite/tests/rename/should_fail/T5589.hs
module T5589 where

bbb, aaa :: Int
aaa :: Int
aaa = undefined
bbb = undefined
