testsuite/tests/rename/should_fail/T5589.stderr

T5589.hs:4:1: error: [GHC-31744]
    Duplicate type signatures for ‘aaa’
    at T5589.hs:3:6-8
       T5589.hs:4:1-3
